2017-02-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/CMakeLists.txt: Add -Wextra flag.

	* nasl/nasl_builtin_nmap.c (nse_script_destroy, simple_item_destroy)
	(xml_start_element, xml_end_element, xml_read_text, xmltag_open_host)
	(xmltag_open_ports, xmltag_open_cpe, xmltag_open_hostscript),
	nasl/nasl_builtin_openvas_tcp_scanner.c (std_port, banner_grab)
	(plugin_run_openvas_tcp_scanner), nasl/nasl_builtin_synscan.c
	(packetdead, rm_dead_packets, extracttcp, v6_extracttcp, extractsport)
	(issynack, mktcpv6, v6_sendpacket, scan, plugin_run_synscan),
	nasl/nasl_crypto.c (nasl_get_sign, nasl_nt_owf_gen, nasl_lm_owf_gen),
	nasl/nasl_grammar.y (naslerror), nasl/nasl_host.c (nasl_this_host_name),
	nasl/nasl_http.c (cgibin), nasl/nasl_init.c (init_nasl_library),
	nasl/nasl_isotime.c (nasl_isotime_now), nasl/nasl_misc_funcs.c
	(nasl_rand, nasl_unixtime, nasl_dec2str, nasl_get_byte_order),
	nasl/nasl_packet_forgery.c (dump_tcp_packet, get_udp_element)
	(set_udp_element, dump_udp_packet, nasl_tcp_ping, nasl_send_packet),
	nasl/nasl_packet_forgery_v6.c (dump_tcp_v6_packet, get_udp_v6_element)
	(set_udp_v6_elements, dump_udp_v6_packet, nasl_tcp_v6_ping)
	(nasl_send_v6packet), nasl/nasl_scanner_glue.c (script_summary)
	(script_get_preference_file_location, nasl_scanner_status),
	nasl/nasl_smb.c (nasl_smb_versioninfo), nasl/nasl_socket.c
	(nasl_get_sock_info), nasl/nasl_ssh.c (next_session_id)
	(nasl_ssh_connect, verify_session_id, nasl_ssh_close_hook)
	(nasl_ssh_session_id_from_sock, exec_ssh_cmd_alarm)
	(request_ssh_shell_alarm), nasl/nasl_tree.c (dump_cell_val, dump_tree)
	(nasl_type_name), nasl/nasl_wmi.c (nasl_wmi_versioninfo): Fix
	unused-parameter and sign-compare extra warnings.

2017-02-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/iconv.c (smb_iconv_ntlmssp), nasl/nasl_builtin_find_service.c
	(mark_swat_server, mark_vqserver, mark_mldonkey, mark_http_proxy)
	(mark_auth_server, mark_pop_server, mark_mysql, mark_cvspserver)